--- a/Web/WEB_lab1/index.html
+++ b/Web/WEB_lab1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+	<meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -27,12 +28,12 @@
                     </ul>
                     <table>
                         <tr >
-                            <th><p>Education history</p></th>
-                            <th><p>Period</p></th>
+                            <th><p class="black">Education history</p></th>
+                            <th><p class="black">Period</p></th>
                         </tr>
                         <tr>
-                            <th>Stadnytsya school ¹1</th>
-                            <th>2003 - 2012</th>
+                            <th>Vinnytsia School &#8470;3</th>
+                            <th>2002 - 2012</th>
                         </tr>
                         <tr>
                             <th>Vinnytsia technical college</th>
@@ -46,9 +47,9 @@
                     
                 </div>
             </div>
-            <footer class="clear">
-                <p>Laboratory work ¹1 (2016)</p>
-                <p>All rights reserved</p>
+            <footer class="clear" >
+                <p>2016 &copy Kubovych Kostya</p>
+                
             </footer>
         </div>
     </body>
